# beets-plugins

./: .gitignore  LICENSE  flake.nix  package.nix  pyproject.toml
beetsplug/: event.py  prettyformat.py
src/beets_plugins/: __init__.py
