[project]
name = "beets-plugins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jakka", email = "jakka@jakka.foo" }
]
requires-python = ">=3.13"
dependencies = [
    "beets>=2.12.0",
]

[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"
