[project]
name = "beets-plugins"
version = "0.1.2"
description = "flake for my beets plugins"
readme = "README.md"
authors = [
    { name = "jakka", email = "jakka@jakka.foo" }
]
requires-python = ">=3.13"
dependencies = [
    "beets>=2.11.0",
    "mediafile>=0.17.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "beetsplug"
module-root = ""
namespace = true
